# bestbois-website

./: .flaskenv  .pre-commit-config.yaml  MeetTheTeam.html  README.md  messages.pot  pyproject.toml
app/: __init__.py  config.py  core.py  i18n.py
app/static/css/: mbr-additional.css
app/static/models/: chibi.glb  low-poly.glb  toon.glb
app/templates/: base.html.jinja  index.html.jinja  lore.html.jinja  models.html.jinja  worlds.html.jinja
app/templates/avatars/: avatar-chibi.html.jinja  avatar-classic.html.jinja  avatar-dutchie.html.jinja  avatar-hd.html.jinja  avatar-kemono.html.jinja  avatar-low-poly.html.jinja  avatar-toon.html.jinja
app/templates/components/: footer.html.jinja  language_picker.html.jinja  nav.html.jinja  scroll_to_top.html.jinja
app/templates/errors/: 404.html.jinja  418.html.jinja  500.html.jinja
app/templates/parts/: footer.html.jinja  nav.html.jinja
app/utils/: __init__.py  time.py
app/views/: __init__.py  avatar_data.py  content.py  core.py  error_pages.py
assets/css/: meet_the_team.css
assets/mobirise/css/: mbr-additional.css
assets/theme/css/: style.css
assets/theme/js/: script.js
