[project]
name = "the-best-boi-project"
version = "4.0.0"
description = "The official Bestbois website."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3",
    "flask-babel>=4.0.0",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "commitizen>=4.16.3",
    "djlint>=1.41.0",
    "pre-commit>=4.6.0",
    "ruff>=0.15.21",
]

[tool.ruff]
include = ["pyproject.toml", "app/**/*.py"]

[tool.ruff.format]
quote-style = "preserve"
